# jetpack

./: .gitignore  AGENTS.md  README.md
.agents/skills/project-task/: SKILL.md
.github/ISSUE_TEMPLATE/: task.md
art/: README.md
client/: README.md  package-lock.json  package.json
client/api-client/: index.ts
client/src/: App.vue
client/src/__tests__/: HomeView.spec.ts
client/src/assets/: base.css
client/src/views/: HomeView.vue
docs/templates/: issue.md  pull_request_template.md
docs/功能/: 协作流程验证.md  项目概览.md
docs/规范/: Git规则.md  Issue规则.md  Projects字段规则.md  发布规则.md  后端规则.md  客户端规则.md  总体工作流.md  接口规则.md  美术资源规则.md
ops/: README.md
server/: README.md  pyproject.toml
server/openapi/: openapi.yaml
server/src/jetpack_api/: __init__.py  main.py
server/tests/: test_main.py
